# conference

./: .gitignore  Dockerfile  Makefile  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  push_to_ghcr.yml
auth/: __init__.py  _requests.py  router.py
common/: use_case.py  utils.py
common/adapters/: storage.py
common/adapters/minio/: adapter.py
server/: config.py
storage/: __init__.py  _requests.py  router.py
storage/adapters/: di.py  storage.py
storage/adapters/minio/: adapter.py
storage/use_cases/: __init__.py  _upload_file.py
translation/: __init__.py  adapter.py  router.py  views.py
translation/deep_gram/: adapter.py  config.py
translation/templates/: base.html  home.html
